# drill-sessions

sessions/session-02/: README.md  print_today.py  run_calculator.py
sessions/session-02/calculator/: add.py  pyproject.toml
sessions/session-02/calculator/variadic/: add.py  mul.py
